Fix configuration collision for pattern support (#203)
* Replace pattern resolving configuration property keys with axual prefixed ones
* Update PatternResolver to handle mismatched braces in patterns
* Update and add relevant unit tests.
* Added missing topics for the examples docker compose
* Added AssertJ test dependencies
* Fix NotationLibrary issue with TopologyGeneratorBasicTest